--- a/index.html
+++ b/index.html
@@ -608,8 +608,8 @@
     let cachedFactory = null;
     let Module = null;
     let Api = null;
-    let vendorBase = null;
-    let locateFile = null;
+    const vendorBase = new URL("./vendor/opencc-wasm/", window.location.href);
+    const locateFile = (path) => new URL(path, vendorBase).href;
 
     const handles = new Map();
     const loadedDicts = new Set();
@@ -619,15 +619,7 @@
 
     async function loadWasmFactory() {
       if (cachedFactory) return cachedFactory;
-      const baseUrl = new URL("./vendor/opencc-wasm/", window.location.href).href;
-      const url = new URL("esm/opencc-wasm.js", baseUrl).href;
-      const wasmUrl = new URL("opencc-wasm.wasm", baseUrl).href;
-      const mod = await import(url);
-      vendorBase = baseUrl;
-      locateFile = (path) => {
-        if (path.endsWith(".wasm")) return wasmUrl;
-        return new URL(path, baseUrl).href;
-      };
+      const mod = await import(new URL("esm/opencc-wasm.js", vendorBase).href);
       cachedFactory = mod.default;
       return cachedFactory;
     }
@@ -665,7 +657,7 @@
         try { mod.FS.mkdir("/data/config"); } catch (e) { }
         try { mod.FS.mkdir("/data/dict"); } catch (e) { }
 
-        const base = vendorBase || new URL("./vendor/opencc-wasm/", window.location.href).href;
+        const base = vendorBase.href;
         const cfgUrl = `${base}data/config/${cfgName}`;
         const cfgResp = await fetch(cfgUrl);
         if (!cfgResp.ok) throw new Error(`${cfgUrl} -> HTTP ${cfgResp.status}`);
